unpackaged/main/default/objects/litify_pm__Log__c/litify_pm__Log__c.object-meta.xml
<CustomObject>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG-{YY}{MM}{DD}{0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>