unpackaged/main/default/objects/litify_pm__Log__c/fields/litify_pm__Change_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Change_Date__c</fullName>
    <description>Store the date change from Events and Triggers for Audit purposes</description>
    <inlineHelpText>Store the date change from Events and Triggers for Audit purposes</inlineHelpText>
    <label>Change  Date</label>
    <type>DateTime</type>
</CustomField>