unpackaged/main/default/objects/litify_pm__Log__c/fields/litify_pm__ChangeReason__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__ChangeReason__c</fullName>
    <description>Log a change to a record and the reason for the change</description>
    <inlineHelpText>Log a change to a record and the reason for the change</inlineHelpText>
    <label>Change Reason</label>
    <type>TextArea</type>
</CustomField>