unpackaged/main/default/objects/litify_pm__Log__c/fields/litify_pm__Classname__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Classname__c</fullName>
    <label>Classname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>