unpackaged/main/default/objects/litify_pm__Log__c/fields/litify_pm__Client_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Client_IP_Address__c</fullName>
    <label>Client IP Address</label>
    <length>128</length>
    <type>Text</type>
</CustomField>