unpackaged/main/default/objects/litify_pm__Log__c/fields/litify_pm__EventLogJunction__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__EventLogJunction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Log Junction</label>
    <referenceTo>litify_pm__EventLogJunction__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>