unpackaged/main/default/objects/litify_pm__Log__c/fields/litify_pm__Full_Details__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Full_Details__c</fullName>
    <label>Full Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>