unpackaged/main/default/objects/litify_pm__Log__c/fields/litify_pm__Message__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>