unpackaged/main/default/objects/litify_pm__Log__c/fields/litify_pm__RequestBody__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__RequestBody__c</fullName>
    <label>Request Body</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>