unpackaged/main/default/objects/litify_pm__Log__c/fields/litify_pm__RequestHeaders__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__RequestHeaders__c</fullName>
    <label>Request Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>