unpackaged/main/default/objects/litify_pm__Log__c/fields/litify_pm__Severity__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>FATAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>