unpackaged/main/default/objects/litify_pm__Log__c/fields/litify_pm__Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Stacktrace__c</fullName>
    <label>Stacktrace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>